--- a/single-product.html
+++ b/single-product.html
@@ -13,15 +13,15 @@
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="view/css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="view/css/font-awesome.css">
 
-    <link rel="stylesheet" href="assets/css/templatemo-hexashop.css">
+    <link rel="stylesheet" href="view/css/templatemo-hexashop.css">
 
-    <link rel="stylesheet" href="assets/css/owl-carousel.css">
+    <link rel="stylesheet" href="view/css/owl-carousel.css">
 
-    <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="view/css/lightbox.css">
 <!--
 
 TemplateMo 571 Hexashop
@@ -52,7 +52,7 @@ https://templatemo.com/tm-571-hexashop
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="assets/images/logo.png">
+                            <img src="view/images/logo.png">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -114,8 +114,10 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-8">
                 <div class="left-images">
-                    <img src="assets/images/single-product-01.jpg" alt="">
-                    <img src="assets/images/single-product-02.jpg" alt="">
+                    <img src="view/images/single-product-01.jpg" alt="">
+                    <img src="view/images/single-product-02.jpg" alt="">
+                    <img src="view/images/single-product-02.jpg" alt="">
+                    <img src="view/images/single-product-02.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-4">
@@ -147,6 +149,11 @@ https://templatemo.com/tm-571-hexashop
                         <h4>Total: $210.00</h4>
                         <div class="main-border-button"><a href="#">Add To Cart</a></div>
                     </div>
+
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel earum suscipit laudantium corrupti! Exercitationem soluta sint impedit dolorum veritatis aliquam vel officiis corrupti cum libero quibusdam, modi pariatur ab quisquam.</span>
+                    <div class="quote">
+                        <i class="fa fa-quote-left"></i><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod.</p>
+                    </div>
                 </div>
             </div>
             </div>
@@ -161,7 +168,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <div class="first-item">
                         <div class="logo">
-                            <img src="assets/images/white-logo.png" alt="hexashop ecommerce templatemo">
+                            <img src="view/images/white-logo.png" alt="hexashop ecommerce templatemo">
                         </div>
                         <ul>
                             <li><a href="#">16501 Collins Ave, Sunny Isles Beach, FL 33160, United States</a></li>
@@ -215,27 +222,27 @@ https://templatemo.com/tm-571-hexashop
     
 
     <!-- jQuery -->
-    <script src="assets/js/jquery-2.1.0.min.js"></script>
+    <script src="view/js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="view/js/popper.js"></script>
+    <script src="view/js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/accordions.js"></script>
-    <script src="assets/js/datepicker.js"></script>
-    <script src="assets/js/scrollreveal.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/imgfix.min.js"></script> 
-    <script src="assets/js/slick.js"></script> 
-    <script src="assets/js/lightbox.js"></script> 
-    <script src="assets/js/isotope.js"></script> 
-    <script src="assets/js/quantity.js"></script>
+    <script src="view/js/owl-carousel.js"></script>
+    <script src="view/js/accordions.js"></script>
+    <script src="view/js/datepicker.js"></script>
+    <script src="view/js/scrollreveal.min.js"></script>
+    <script src="view/js/waypoints.min.js"></script>
+    <script src="view/js/jquery.counterup.min.js"></script>
+    <script src="view/js/imgfix.min.js"></script> 
+    <script src="view/js/slick.js"></script> 
+    <script src="view/js/lightbox.js"></script> 
+    <script src="view/js/isotope.js"></script> 
+    <script src="view/js/quantity.js"></script>
     
     <!-- Global Init -->
-    <script src="assets/js/custom.js"></script>
+    <script src="view/js/custom.js"></script>
 
     <script>
 
